- (Desde windows) Corregidas las referencias a algunas librerías.

--- a/ejemplos_calculo/viborita/nbproject/project.properties
+++ b/ejemplos_calculo/viborita/nbproject/project.properties
@@ -18,16 +18,16 @@ dist.dir=dist
 dist.jar=${dist.dir}/viborita.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.calculador20080423.jar-1=/home/miltondp/Facultad/becas/faia-2008/netbeans/ejemplos_calculo/viborita/dist/lib/calculador20080423.jar
+file.reference.calculador20080423.jar=calculador20080423.jar
 file.reference.jpl.jar=/home/miltondp/Facultad/becas/faia-2008/netbeans/ejemplos_calculo/viborita/dist/lib/jpl.jar
 file.reference.jpl.jar-1=/home/miltondp/Escritorio/pl-5.6.57-linux/lib/jpl.jar
-file.reference.jpl.jar-2=/home/miltondp/Facultad/becas/faia-2008/faia-svn/faia/lib/jpl.jar
+file.reference.jpl.jar-2=../../faia/lib/jpl.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${reference.faia.jar}:\
-    ${file.reference.calculador20080423.jar-1}:\
-    ${file.reference.jpl.jar-2}
+    ${file.reference.jpl.jar-2}:\
+    ${file.reference.calculador20080423.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
