--- a/trunk/ejemplos_calculo/pacman_logico/nbproject/project.properties
+++ b/trunk/ejemplos_calculo/pacman_logico/nbproject/project.properties
@@ -18,12 +18,12 @@ dist.dir=dist
 dist.jar=${dist.dir}/pacman_logico.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.jpl.jar=/home/miltondp/Facultad/becas/faia-2008/faia-svn/faia/lib/jpl.jar
+file.reference.jpl.jar-1=..\\..\\faia\\lib\\jpl.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${reference.faia.jar}:\
-    ${file.reference.jpl.jar}
+    ${file.reference.jpl.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -31,9 +31,7 @@ javac.source=1.5
 javac.target=1.5
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}:\
-    ${libs.junit.classpath}:\
-    ${libs.junit_4.classpath}
+    ${build.classes.dir}
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
