- Prueba de utilización de UTF-8 en los pdf que se generan con pdflatex. Hay que probarlo en Windows aún.

--- a/ejemplos_calculo/pacman_logico/nbproject/project.properties
+++ b/ejemplos_calculo/pacman_logico/nbproject/project.properties
@@ -18,7 +18,7 @@ dist.dir=dist
 dist.jar=${dist.dir}/pacman_logico.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.jpl.jar-1=..\\..\\faia\\lib\\jpl.jar
+file.reference.jpl.jar-1=../../faia/lib/jpl.jar
 includes=**
 jar.compress=false
 javac.classpath=\
