--- a/trunk/ejemplos_calculo/pacman_logico/nbproject/project.properties
+++ b/trunk/ejemplos_calculo/pacman_logico/nbproject/project.properties
@@ -18,7 +18,7 @@ dist.dir=dist
 dist.jar=${dist.dir}/pacman_logico.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.jpl.jar-1=..\\..\\faia\\lib\\jpl.jar
+file.reference.jpl.jar-1=../../faia/lib/jpl.jar
 includes=**
 jar.compress=false
 javac.classpath=\
