--- a/ejemplos_busqueda/robot/nbproject/project.properties
+++ b/ejemplos_busqueda/robot/nbproject/project.properties
@@ -25,8 +25,8 @@ javac.classpath=\
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
-javac.source=1.5
-javac.target=1.5
+javac.source=1.6
+javac.target=1.6
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -57,6 +57,6 @@ run.jvmargs=
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
-source.encoding=windows-1250
+source.encoding=UTF-8
 src.dir=src
 test.src.dir=test
