--- a/ejemplos_calculo/pacman_logico/nbproject/project.properties
+++ b/ejemplos_calculo/pacman_logico/nbproject/project.properties
@@ -27,8 +27,8 @@ javac.classpath=\
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
-javac.source=1.5
-javac.target=1.5
+javac.source=1.6
+javac.target=1.6
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -59,6 +59,6 @@ run.jvmargs=-Djava.library.path="/usr/lib/pl-5.6.57/lib/i386-linux"
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
-source.encoding=windows-1250
+source.encoding=UTF-8
 src.dir=src
 test.src.dir=test
