- GoalBasedAgent: su método see es abstracto ahora, obligando al usuario a sobreescribirlo. Todos los ejemplos actualizados. - Algunos cambios menores en archivos fuentes. - Algunos comentarios. - Algunos cambios de los archivos de proyecto de NetBeans.

--- a/ejemplos_busqueda/viborita/nbproject/project.properties
+++ b/ejemplos_busqueda/viborita/nbproject/project.properties
@@ -19,11 +19,12 @@ dist.jar=${dist.dir}/viborita.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.calculador20080423.jar=lib/calculador/calculador20080423.jar
+file.reference.calculador20080423.jar-1=lib/calculador20080423.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${reference.faia.jar}:\
-    ${file.reference.calculador20080423.jar}
+    ${file.reference.calculador20080423.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
