--- a/ejemplos_calculo/viborita_logico/nbproject/project.properties
+++ b/ejemplos_calculo/viborita_logico/nbproject/project.properties
@@ -19,13 +19,15 @@ dist.jar=${dist.dir}/viborita_logico.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.calculador20080423.jar=../../ejemplos_busqueda/viborita/lib/calculador/calculador20080423.jar
+file.reference.calculador20080423.jar-1=../../ejemplos_busqueda/viborita/lib/calculador20080423.jar
 file.reference.jpl.jar=../../faia/lib/jpl.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${reference.faia.jar}:\
     ${file.reference.jpl.jar}:\
-    ${file.reference.calculador20080423.jar}
+    ${file.reference.calculador20080423.jar}:\
+    ${file.reference.calculador20080423.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
