--- a/faia/nbproject/project.properties
+++ b/faia/nbproject/project.properties
@@ -1,7 +1,7 @@
 application.title=faia
 application.vendor=miltondp
 build.classes.dir=${build.dir}/classes
-build.classes.excludes=**/*.java,**/*.form
+build.classes.excludes=**/*.form
 # This directory is removed when the project is cleaned:
 build.dir=build
 build.generated.dir=${build.dir}/generated
@@ -20,7 +20,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jpl.jar=lib/jpl.jar
 includes=**
-jar.compress=false
+jar.compress=true
 javac.classpath=\
     ${file.reference.jpl.jar}
 # Space-separated list of extra javac options
