--- a/faia/.project
+++ b/faia/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>FAIA</name>
+	<name>faia</name>
 	<comment></comment>
 	<projects>
 	</projects>
