--- a/ejemplos_calculo/wumpus/nbproject/project.properties
+++ b/ejemplos_calculo/wumpus/nbproject/project.properties
@@ -46,7 +46,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=
+main.class=agent.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 platform.active=default_platform
