--- a/examples/nbproject/project.properties
+++ b/examples/nbproject/project.properties
@@ -35,9 +35,7 @@ javac.source=1.6
 javac.target=1.6
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}:\
-    ${libs.junit.classpath}:\
-    ${libs.junit_4.classpath}
+    ${build.classes.dir}
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
@@ -58,10 +56,6 @@ reference.faia.jar=${project.faia}/dist/faia.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
-# Space-separated list of JVM arguments used when running the project
-# (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value
-# or test-sys-prop.name=value to set system properties for unit tests):
-run.jvmargs=-Djava.library.path="/usr/lib/pl-5.6.57/lib/i386-linux"
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
