--- a/examples/nbproject/project.properties
+++ b/examples/nbproject/project.properties
@@ -56,6 +56,7 @@ reference.faia.jar=${project.faia}/dist/faia.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
+run.jvmargs=-Djava.library.path="/usr/lib/pl-5.6.57/lib/i386-linux"
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
