--- a/faia/.classpath
+++ b/faia/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/jpl.jar"/>
+	<classpathentry kind="lib" path="lib/jmathlink.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
