--- a/examples/.classpath
+++ b/examples/.classpath
@@ -4,6 +4,6 @@
 	<classpathentry kind="lib" path="lib/calculador/calculador20080423.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/faia"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/jmatlink"/>
+	<classpathentry kind="lib" path="/faia/lib/jmathlink.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
