--- a/trunk/faia/nbproject/project.properties
+++ b/trunk/faia/nbproject/project.properties
@@ -1,5 +1,8 @@
 application.title=faia
 application.vendor=miltondp
+auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.tab-size=8
+auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.text-limit-width=80
+auxiliary.org-netbeans-modules-editor-indent.CodeStyle.usedProfile=default
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.form
 # This directory is removed when the project is cleaned:
@@ -18,11 +21,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/faia.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jmathlink.jar=lib/jmathlink.jar
 file.reference.jpl.jar=lib/jpl.jar
 includes=**
 jar.compress=true
 javac.classpath=\
-    ${file.reference.jpl.jar}
+    ${file.reference.jpl.jar}:\
+    ${file.reference.jmathlink.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -42,6 +47,12 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jnlp.codebase.type=local
+jnlp.codebase.url=file:/home/miltondp/Facultad/becas/faia/faia-svn/faia/dist/
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.offline-allowed=false
+jnlp.signed=false
 main.class=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
