--- a/examples/nbproject/configs/PacmanLogico.properties
+++ b/examples/nbproject/configs/PacmanLogico.properties
@@ -1,1 +1,1 @@
-main.class=frsf.cidisi.faia.examples.situationcalculus.pacman.Main
+main.class=frsf.cidisi.faia.examples.situationcalculus.pacman.PacmanLogicoMain
