--- a/examples/nbproject/project.properties
+++ b/examples/nbproject/project.properties
@@ -1,5 +1,8 @@
 application.title=examples
 application.vendor=miltondp
+auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.tab-size=8
+auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.text-limit-width=80
+auxiliary.org-netbeans-modules-editor-indent.CodeStyle.usedProfile=default
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -21,13 +24,15 @@ dist.jar=${dist.dir}/examples.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.calculador20080423.jar=lib/calculador/calculador20080423.jar
+file.reference.jmathlink.jar=../faia/lib/jmathlink.jar
 file.reference.jpl.jar=../faia/lib/jpl.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${reference.faia.jar}:\
     ${file.reference.calculador20080423.jar}:\
-    ${file.reference.jpl.jar}
+    ${file.reference.jpl.jar}:\
+    ${file.reference.jmathlink.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -47,7 +52,13 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=frsf.cidisi.faia.examples.Main
+jnlp.codebase.type=local
+jnlp.codebase.url=file:/home/miltondp/Facultad/becas/faia/faia-svn/examples/dist/
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.offline-allowed=false
+jnlp.signed=false
+main.class=frsf.cidisi.faia.examples.matlab.simple_water_tank.SimpleWaterTankMain
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 platform.active=default_platform
@@ -56,7 +67,7 @@ reference.faia.jar=${project.faia}/dist/faia.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
-run.jvmargs=-Djava.library.path="/usr/lib/pl-5.6.57/lib/i386-linux"
+run.jvmargs=-Djava.library.path="/usr/lib/pl-5.6.57/lib/i386-linux:."
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
