--- a/examples/nbproject/configs/Pacman.properties
+++ b/examples/nbproject/configs/Pacman.properties
@@ -1,1 +1,1 @@
-main.class=frsf.cidisi.faia.examples.search.pacman.PacmanBusquedaMain
+main.class=frsf.cidisi.faia.examples.search.pacman.PacmanSearchMain
